Написал методы для работы с userbookfavourites
